--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "express-validator": "^7.0.1",
     "libphonenumber-js": "^1.10.28",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
